--- a/MileTracker/MileTracker-Info.plist
+++ b/MileTracker/MileTracker-Info.plist
@@ -14,6 +14,28 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
+				<string>icon_80</string>
+				<string>icon_58</string>
+				<string>icon_120</string>
+				<string>Icon.png</string>
+				<string>Icon@2x.png</string>
+			</array>
+		</dict>
+	</dict>
+	<key>CFBundleIcons~ipad</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>icon_40</string>
+				<string>icon_58</string>
+				<string>icon_80</string>
+				<string>icon_100</string>
+				<string>icon_152</string>
+				<string>icon_76</string>
+				<string>icon_144</string>
+				<string>icon_120</string>
 				<string>Icon.png</string>
 				<string>Icon@2x.png</string>
 			</array>
